--- a/templates/about.html
+++ b/templates/about.html
@@ -13,17 +13,24 @@
     <div class="wrap">
         
         <div class="container">
-            <div id="come_soon">COMING SOON...</div>
             <div class="grid-container no-margin">
                 <img src="/static/image/brand/ME AND MR. LEO.png">
                 <img src="/static/image/brand/TRENOVKR.jpg">
             </div>
 
             <div>
-                <p>Driven by Decor</p>
+                <!-- <p>Driven by Decor</p>
                 <p>Aim to design and produce creative and useful home accessories, hopefully that we can brighten up your everyday life.</p>
                 <p>Strive to make every product joyful and meaningful to bring you enjoyment and happiness.</p>
-                <p>Committed to provide each customer with a great shopping experience.</p>
+                <p>Committed to provide each customer with a great shopping experience.</p> -->
+
+                <p style="font-size: 24px; line-height: 30px;">
+                    We are a Chinese enterprise dedicated to designing and finding high-quality industrial products. We know very well that Made in China does not mean low-end manufacturing. China also has many excellent high-quality industrial products. However, we also realize that there are still some shortcomings in the current image of China's industrial products in the international market.
+                    <br><br>
+                    For this reason, we have always spared no effort to present high-quality industrial products to you. Despite this, our products may still not fully meet your expectations, but we are committed to continuously improving them to win your favor and recognition. We believe that through our efforts, Made in China will be able to establish a new image in the international market and become synonymous with high quality and cost-effectiveness.
+                    <br><br>
+                    We hope that our products can make you feel the charm of Made in China and make you proud of Made in China.
+                </p>
             </div>
 
         </div>
