--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -111,7 +111,8 @@ wrap > container > grid
   {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, auto));
-    margin-top: 20px;
+    margin-top: 1%;
+    padding: 1%;
   }
   .grid-cart > div:first-child
   {
@@ -119,20 +120,17 @@ wrap > container > grid
     height: 200px;
     justify-self: center;
   }
+  .grid-cart > div:nth-child(2) > div
+  {
+    margin-bottom: 3%;
+  }
   .grid-2-4
   {
     display: grid;
     grid-template-columns: repeat(4, auto);
     grid-template-rows: repeat(2, 100px);
   }
-  .nav-plus
-  {
-    display: grid;
-  }
-  .nav-mini
-  {
-    display: none;
-  }
+
 
 }
 /* 小于980 针对移动端*/
@@ -162,28 +160,33 @@ wrap > container > grid
   .grid-cart
   {
     display: grid;
-    grid-template-columns: 400px auto;
-    grid-template-rows: auto 200px;
+    grid-template-columns: 250px auto;
+    grid-template-rows: auto;
+    padding: 5%;
+    margin: 3%;
+    border-radius: 8px;
+    background-color: #f9f9f9;
   }
   .grid-cart > div:first-child
   {
     grid-area: 1 / 1 / 3 / 2;
     justify-self: center;
-
+    margin-right: 20%;
+  }
+  .grid-cart > div:first-child > a > img
+  {
+    border-radius: 6px;
+  }
+  .grid-cart > div:nth-child(2) > div
+  {
+    margin-bottom: 3%;
   }
   .grid-cart > div:last-child
   {
     grid-area: 2 / 2 / 3 / 3;
   }
-  /* cart end */
-  .nav-plus
-  {
-    display: none;
-  }
-  .nav-mini
-  {
-    display: block;
-  }
+
+
 }
 
 
