--- a/templates/my-cart.html
+++ b/templates/my-cart.html
@@ -11,55 +11,40 @@
     
     <div id="" class="wrap">
     
-        <div class="container radius-div">
-            <!---------------------01--------------------->
-            <div id="" class="grid-cart -select- margin-20 padding-10">
+        <div class="container">
+            <!---------------------unit--------------------->
+            {% for product_info in product_info %}
+            <div class="grid-cart -select-">
                 <div>
                     <a href=""><img src="{{ product_info.first_img }}" /></a>
                 </div>
-                <div class="margin-t-b">
-                    <div><a href="" class="display-row-3">{{ product_info.title }}</a></div>
+                <div>
+                    <div><a href="" class="display-row-3"><h3>{{ product_info.title }}</h3></a></div>
                     <div><a href="">Qty: 1</a></div>
-                    <div><a href="">Delet</a></div>
+                    <!-- <div><a href="">Delet</a></div> -->
                 </div>
-                <div class="padding-20" style="text-align: right;">
+                <div style="text-align: right;">
                     <div>$<span>{{ product_info.price }}</span></div>
-                    <div>no cupon</div>
+                    <!-- <div>no cupon</div> -->
                     <div>
                         Subtotal: $<span><b>{{ product_info.price }}</b></span>
                     </div>
                 </div>
+                <!-- <div><a href="{{ amazon }}" target="_blank" class="widget-btn">Buy on Amazon</a></div> -->
             </div>
-            <!---------------------01--------------------->
-            <!---------------------02--------------------->
-            <div id="" class="grid-cart -select- margin-20 padding-10">
-                <div>
-                    <a href=""><img src="{{ product_info.first_img }}" /></a>
-                </div>
-                <div class="margin-t-b">
-                    <div><a href="" class="display-row-3">{{ product_info.title }}</a></div>
-                    <div><a href="">Qty: 1</a></div>
-                    <div><a href="">Delet</a></div>
-                </div>
-                <div class="padding-20" style="text-align: right;">
-                    <div>$<span>{{ product_info.price }}</span></div>
-                    <div>no cupon</div>
-                    <div>
-                        Subtotal: $<span><b>{{ product_info.price }}</b></span>
-                    </div>
-                </div>
-            </div>
-            <!---------------------02--------------------->
+            {% endfor %}
+            <!---------------------unit--------------------->
+
         </div>
 
         <div class="container">
             <!---------------------sumbit--------------------->
-            <div class="margin-20" style="height:60px; line-height:60px; text-align: right;">
+            <div style="height:160px; line-height:160px; text-align: right;">
                 Total: $<span><b>{{ product_info.price }}</b></span>
             </div>
-            <div class="margin-20">
-                <a href="{{ url_page_id_order }}" type="sumbit" class="widget-btn float-right">Commit Order</a>
-                <button id="cart" type="submit"><h3>Commit Order</h3></button>
+            <div style="height:160px; line-height:160px; text-align: right;">
+                <!-- <a href="{{ url_page_id_order }}" type="sumbit" class="widget-btn float-right">Commit Order</a> -->
+                <button id="cart" type="submit" class="widget-btn float-right"><h3>Commit Order</h3></button>
             </div>
             <!---------------------sumbit--------------------->
         </div>
