--- a/templates/test.html
+++ b/templates/test.html
@@ -19,11 +19,11 @@
 window.onload = function()
 {  
     num = Math.floor(Math.random()*10)
-    console.log(num)
+    // console.log(num)
 
     var a = document.getElementById('a')
     var b = document.getElementById('b')
-    console.log('a: ', a.left)
+    // console.log('a: ', a.left)
     
 }
 function nex()
@@ -90,10 +90,10 @@ function pre()
         </div>
     </nav>
     
-    <nav id="kris" style="min-height: 500px; width: 100%; border: #ff0000 solid 2px; overflow: hidden; position: relative; margin: 5% 0;">
-        <div id="jessie" class="flex-container" style="position: absolute; left: 0px;">
-            <div style="height: 600px;"><img style="height: 600px;" src="/static/image/products/B0BTXB89PG/v1.00/970/1-A+-970.jpg" alt=""></div>
-            <div style="height: 600px;"><img style="height: 600px;" src="/static/image/products/B0BTXB89PG/v1.00/970/2-A+-970.jpg" alt=""></div>
+    <nav id="kris" class="flex-container" style="min-height: 500px; width: 100%; border: #ff0000 solid 2px; overflow: hidden; position: relative; margin: 5% 0;">
+        <div id="jessie" class="flex-container" style="position: absolute;">
+            <div id="1" style="height: 600px;"><img style="height: 600px;" src="/static/image/products/B0BTXB89PG/v1.00/970/1-A+-970.jpg" alt=""></div>
+            <div id="2" style="height: 600px;"><img style="height: 600px;" src="/static/image/products/B0BTXB89PG/v1.00/970/2-A+-970.jpg" alt=""></div>
         </div>
     </nav>
 
