--- a/templates/nav.html
+++ b/templates/nav.html
@@ -36,7 +36,7 @@
                 <div>
                     <a class="login-btn" href="{{ nav_account.login.0 }}">Login</a>
                     <a class="createaccount-btn" href="{{ nav_account.createAccount.0 }}">Create Account</a>
-                    <div>List</div>
+                    <!-- <div>List</div> -->
                 </div>
             </div>
             {% endif %}
