--- a/static/css/module.css
+++ b/static/css/module.css
@@ -123,7 +123,7 @@ ul.nav-app-list > li > a:hover
   position: absolute;
   top: 35px;
   right: 0;
-  /* display: none; */
+  display: none;
 }
 .account > .account-list > div
 {
